--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
     />
 
     <title>Hansie Kristi</title>
-<!--
-Reflux Template
-https://templatemo.com/tm-531-reflux
--->
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -37,11 +34,11 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
+              <a href="#"><img src="assets\images\Hansie_author.jpeg" alt="" /></a>
             </div>
             <div class="author-content">
-              <h4>Reflux Me</h4>
-              <span>Web Designer</span>
+              <h4>Hansie Kristi</h4>
+              <span>Python Programmer</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
