--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets\images\Hansie_author.jpeg" alt="" /></a>
+              <a href="#"><img src="assets\images\author-image.jpg" alt="" /></a>
             </div>
             <div class="author-content">
               <h4>Hansie Kristi</h4>
